--- a/index.html
+++ b/index.html
@@ -7,6 +7,71 @@
         <script defer src="script.js"></script>
     </head>
     <body>
-        
+        <pre>                                                                                        
+_______                                           .---.                     
+\  ___ `'.                                        |   |          /|         
+ ' |--.\  \                     .--./)            |   |          ||         
+ | |    \  ' .-,.--.           /.''\\             |   |          ||         
+ | |     |  '|  .-. |    __   | |  | |            |   |    __    ||  __     
+ | |     |  || |  | | .:--.'.  \`-' /             |   | .:--.'.  ||/'__ '.  
+ | |     ' .'| |  | |/ |   \ | /("'`              |   |/ |   \ | |:/`  '. ' 
+ | |___.' /' | |  '- `" __ | | \ '---.            |   |`" __ | | ||     | | 
+/_______.'/  | |      .'.''| |  /'""'.\           |   | .'.''| | ||\    / ' 
+\_______|/   | |     / /   | |_||     ||          '---'/ /   | |_|/\'..' /  
+             |_|     \ \._,\ '/\'. __//                \ \._,\ '/'  `'-'`   
+                      `--'  `"  `'---'                  `--'  `"            
+        </pre>
+        <h3>variables</h3>
+        <hr>
+        <form>
+            <div class="vr">
+                <!--Variable Row-->
+                <label>Mass: </label>
+                <input name="m" type="number" value="10" step="1">
+            </div>
+            <div class="vr">
+                <label>Angle: </label>
+                <input name="B" type="number" value="45" step="1">
+            </div>
+            <div class="vr">
+                <label>Coefficient of Friction: </label>
+                <input name="u" type="number" value="0.45" step="0.01">
+            </div>
+            <div class="vr">
+                <label>Area: </label>
+                <input name="A" type="number" value="0.01" step="0.01">
+            </div>
+            <div class="vr">
+                <label>Initial Velocity: </label>
+                <input name="v0" type="number" value="20" step="1">
+            </div>
+            <div class="vr">
+                <label>Fluid Density: </label>
+                <input name="p" type="number" value="1.3" step="0.1">
+            </div>
+            <div class="vr">
+                <label>Time Interval: </label>
+                <input name="dt" type="number" value="0.001" step="0.001">
+            </div>
+            <input id="run" type="button" value="run" onclick="main(this.form)">
+        </form>
+        <table class="hide">
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Angle</th>
+                    <th>X Acceleration</th>
+                    <th>Y Acceleration</th>
+                    <th>Velocity</th>
+                    <th>X Velocity</th>
+                    <th>Y Velocity</th>
+                    <th>X Position</th>
+                    <th>Y Position</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr id="show"></tr>
+            </tbody>
+        </table>
     </body>
 </html>
