top button & code clean-up

--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@ _______                                           .---.
             </div>
         </div>
         <input id="run" type="button" value="run" onclick="main()">
+        <input id="top" class="hide" type="button" value="top" onclick="toTop()">
         <div id="hidden-header" class="hide">
             <hr>
-            <input id="export" class="hide" type="button" value="export .csv" onclick="toCSV()">
+            <input id="export" type="button" value="export .csv" onclick="toCSV()">
         </div>
         <table class="hide">
             <thead>
